* ! pull_request_review_comment_action variant now has Unknown fall-back
  constructor
* ! release_action variant now has Unknown fall-back constructor
* ! watch_action variant now has Unknown fall-back constructor
* ! status_state variant now has Unknown fall-back constructor
* ! update_pull_base field added (PR target branch is now updatable)
* ! URI.issue_comment signature changed
* ! Issue.comments signature changed
* Add Labels API support (#146 from @dave-tucker)
* Add Collaborators API support
* Add Emojis API support
* Make `tls` the default recommended dependency instead of OpenSSL
* Require atdgen >= 1.10.0 for <json untyped> support
* Add HTTP redirect support (Response.redirect(s) and Response.final_resource)
* Improve GitHub error reporting (#151)
* Add Organization.user_orgs (#130 from @yallop)
* Add Hook.parse_event
* Add event_hook_constr type for the web hook event variants
* Add Repo.create
* Add Repo.delete
* Add Stream.fold
* Add Issue.get
* Add Status.get
* Add Issue.comments_for_repo
* Add Issue.get_comment
* Add Issue.update_comment
* Add Issue.delete_comment
* Add repository_event
* Add type Filter.issue_comment_sort
* Add Issue.events
* push_event_before field added

1.1.0 (2016-06-20):
* Add new_status_context and status_context fields (#88)
* Add setting the jar cookie by the `GH_COOKIE` env var (#100 by @rgrinberg)
* Remove camlp4 as a build time dependency (#99, #104, #106 by @rgrinberg)
* Add Windows tests via Appveyor (#98)
* Add jar 'local' subcommand for printing local cookies (#111 by @rgrinberg)
* Add Repo.contributor_stats for contributor statistics (#114 by @sevenEng)
* Add stats_contributor type (#114 by @sevenEng)
* Add stats_contributors type (#114 by @sevenEng)
* Add contribution_week type
* Fix Repo.get_tags_and_times exception when repository has no tags (#113)
* Change Github_core.Make to accept an Env module making the library
  Mirage compatible by moving a Unix.getenv invocation into a parameter (#93)